Add Google AI support, unit tests, and project improvements
Features:

- Added Google AI (Gemini) API key detection pattern

- Added configurable --providers flag to select which providers to scan

- Added --timeout flag for validation request timeout

- Added .env.example template for new users

- Added unit tests for all API key regex patterns

Improvements:

- Updated validation functions with docstrings and configurable timeouts

- Updated .gitignore to exclude generated files (audit.log, progress.json, etc.)

- Improved README with tables, examples, and better documentation

- Dynamic provider selection via configuration

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@ coverage.xml
 .mypy_cache
 .pytest_cache
 .hypothesis
+
+# Project-specific
+progress.json
+audit_results.json
+audit_results.csv
+audit_results.txt
+audit.log
