chore: update .env.example with latest changes

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ GITHUB_TOKEN=your_github_personal_access_token_here
 
 # Optional: Disable file logging (set to 1 to only log to console)
 # GITHUB_AUDITOR_DISABLE_FILE_LOG=0
+
+# Optional: Fernet key for encrypted output (--encrypt-output)
+# OUTPUT_ENCRYPTION_KEY=your_fernet_key_here
